Added overview and spell checked...basic
To TDTK-package for justification overview of reasons.

--- a/tdtk-package.org
+++ b/tdtk-package.org
@@ -9,6 +9,77 @@ repository:  (https://github.com/Eric43/tdtk.  These function can be
 used alone or in conjunction with tdtk markdown and example R files to
 help with patient analysis.  The functions currently comprise of:
 
+* Overall design justificaiton for R based trauma patiant data analysis
+
+The goal of this document is to look at the main resons for
+development of the trauma director tool kit (tdtk)
+(https://github.com/Eric43/tdtk)
+
+* Reasons for development
+
+From ACS orage book (primary resource for trauma directors):
+
+#+BEGIN_QUOTE
+"A trauma registry can be valuable only if the data it contains can
+be transformed into useful information through the process of report
+writing. Trauma registry reports support decision making and guide the
+management of the trauma center. Most trauma registry software
+provides for the generation of several standard reports that summarize
+different ways to address specific questions or areas of concern. Most
+standard reports are oriented to anticipate the needs of a trauma
+center’s PIPS program and provide the needed information. This
+capability should be built into the software itself or achieved by
+exporting the data to a separate spreadsheet, relational database, or
+statistical program." (ACS orange book chapter 15)
+#+END_QUOTE
+
+
+** Need for a multi EHR/EMR platform trauma patient analysis software
+
+Currently there are basic National Trauma Database (NTB) and Trauma
+Quality Improvement Process (?) (TQUIP) summary analysis that allow
+for basic benchmarking.  This can provide trauma surgeons (defined as:
+Adavanced ractice Surgeons with added creditials in Trauma and/or
+Critical Care), with a broad overview of thier trauma practice.
+However, the use of large data sets and national/international
+benchmarking is ont without problems.  First, thic can lead to know
+statistical effect such as Simpson's paradox (Yule-Simpson effect).
+Next, whlle very useful for maco-patientomics disease analysis large
+benchmarking may obscure local/micro-patientomics disease patterns.
+Finally, there is a need for a rapidly customizable way for trauma
+doctors to analyze their patient data in a customizable and insightful
+way.  Therefore, the use of R (a GNU licensed statsitical
+"programming" software) along with tdtk-package and markdown reports
+form the basis of the tdtk ecosystem.
+
+** Need for non-standard statisitcal analysis
+
+As machine learning/artificial intellegence (ML/AI) increase in usage
+it seems necessary that these models be applied to the disease of
+trauma.  Some of the current non-standard summary statistical models
+include (but are only limited by imagination):  linear modeling LOS to
+ISS, Multi-group LM of LOS v ISS, muti-variate  analysis using linear
+modeling for better estimation of resources needed to care for the
+critically injured patient.  
+
+** Need for local geo-spatial statistics 
+
+
+
+** Need for ability to import .csv, .xls or SQL interface
+
+** Need for common use statistical analysis platform for trauma directors
+
+Looking at both federal, state and local trauma reports there is a
+range of different analysis along with a range of differnt software
+packages such as: Mathematical, SAS, SPSS, MatLab etc.  While each one is an
+incredible program in thier own right, there is are the monetary and
+learning barrier of these systems.  Additionally, most (if not all) of
+the EHR/EMR systems have basic SQL (or eq.) report generation
+abilities.  All of these options provide a need for a free trauma
+specific statistical analysis software.  
+
+* Functions Overview
 
 -  age_cat() DONE
 -  blind_tdtk() TODO was part of read_tdtk but separating for ease of
